--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,5 +1,20 @@
-@import 'base/normalize';
-@import 'base/variables';
-@import 'base/mixins';
-@import 'base/globales';
-@import 'base/utilidades';
+@use 'base/normalize';
+@use 'base/variables';
+@use 'base/mixins';
+@use 'base/globales';
+@use 'base/utilidades';
+@use 'base/botones';
+
+/** UI **/
+
+@use 'layout/header';
+@use 'layout/footer';
+@use 'layout/navegacion';
+@use 'layout/iconos';
+@use 'layout/anuncios';
+@use 'layout/contactar';
+@use 'layout/inferior';
+@use 'layout/testimoniales';
+
+/**Paginas internas **/
+@use 'internas/nosotros';
