--- a/src/scss/base/_globales.scss
+++ b/src/scss/base/_globales.scss
@@ -1,3 +1,4 @@
+@use 'base/variables' as v;
 html {
     font-size: 62.5%;
     box-sizing: border-box;
@@ -6,12 +7,12 @@ html {
     box-sizing: inherit;
 }
 body {
-    font-family: $fuente_principal;
+    font-family: v.$fuente_principal;
     font-size: 1.6rem;
     line-height: 1.8;
 }
 p {
-    color: $negro;
+    color: v.$negro;
     font-size: 2rem;
 }
 .contenedor {
@@ -31,8 +32,8 @@ picture {
 }
 
 h1, h2, h3 {
-    font-family: $fuente_principal;
-    margin: calc($separacion / 2) 0;
+    font-family: v.$fuente_principal;
+    margin: calc(v.$separacion / 2) 0;
     font-weight: 300;
     text-align: center;
     
