--- a/src/scss/layout/_anuncios.scss
+++ b/src/scss/layout/_anuncios.scss
@@ -12,6 +12,7 @@
 .anuncio{
     background-color: color.adjust(v.$gris, $lightness: 5%); /*curso usa lighten, pero se deprecio*/
     border: 1px solid color.adjust(v.$gris, $lightness: -10%);
+    margin-bottom: 2rem;
 
     .contenido-anuncio{
         padding: 2rem;
