--- a/src/scss/internas/_nosotros.scss
+++ b/src/scss/internas/_nosotros.scss
@@ -10,11 +10,9 @@
 
 }
 
-.texto-nosotros{
-
-     blockquote{
-        font-size: 2.2rem;
-        font-weight: v.$black;
-        margin: 3rem 0 0
-    }
+.texto-nosotros blockquote {
+    font-weight: v.$black;
+    font-size: 2.2rem;
+    margin: 3rem 0 0 0;
+    padding-left: 1rem 0 3rem 0;
 }
