--- a/src/scss/layout/_navegacion.scss
+++ b/src/scss/layout/_navegacion.scss
@@ -1,9 +1,36 @@
 @use 'base/variables' as v;
 @use 'base/mixins' as m;
 
+.derecha{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    @include m.tablet{
+        align-items: flex-end;
+    }
+
+    .dark-mode-boton{
+        width: 3rem;   
+        margin-top: 3rem;
+        margin-bottom: 2rem;
+        filter: invert(100%);
+
+        &:hover{
+            cursor: pointer;
+        }
+
+        @include m.tablet{
+             margin-top: 0;
+        }   
+
+    }
+}
+
 .barra {
     display: flex;
     flex-direction: column;
+    align-items: center;
     padding-top: 3rem;
     @include m.tablet  {
         flex-direction: row;
@@ -22,8 +49,16 @@
 
 .navegacion {
 
+    visibility: hidden;
+    opacity: 0;
+    height: 0;
+    transition: visibility .3s ease-in-out, opacity 0.5s linear, height 0.5s linear    ;
+
     @include m.tablet {
-        display: flex;//
+        display: flex;
+        align-items: center;
+        opacity: 1;
+        visibility: visible;
     }
 
     a{
@@ -41,4 +76,22 @@
             }
         }
     }
+}
+
+/* menu de hamburguesa */
+
+.mobile-menu{
+    @include m.tablet {
+        display: none;
+    }
+
+    img {
+        width: 5rem;
+    }
+}
+
+.mostrar{
+   visibility: visible;
+   opacity: 1;
+   height: auto;
 }
