CRUD propiedades admin

--- a/src/scss/base/_darkmode.scss
+++ b/src/scss/base/_darkmode.scss
@@ -47,5 +47,15 @@
         }
 
     }
+
+    table.propiedades {
+        tr {
+            td{
+                background-color: v.$blanco;
+                color: v.$negro;
+            }
+        }
+    }
+
 }
 
